Closed Bug 193256 Opened 22 years ago Closed 22 years ago

Adding any control to blacklist closes mozilla when any active-x content opened

Categories

(Core Graveyard :: Embedding: ActiveX Wrapper, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.3final

People

(Reporter: ashshbhatt, Assigned: adamlock)

References

Details

Attachments

(1 file)

Tested with 2003-02-13 Steps to reproduce 1. Add any control to HKEY_LOCAL_MACHINE\SOFTWARE\Mozilla\ActiveX\Blacklist\CLSID 2. Start mozilla 3. Open page with Active-x content
Attached patch PatchSplinter Review
Small patch Bustage caused by a loop that didn't break properly, meaning a counter would spin forever trying to enumerate keys. I also noticed two args in the plugin were mixed up causing controls on the whitelist to be ignored.
Comment on attachment 114432 [details] [diff] [review] Patch Dave & Alec, can you r/sr this simple patch please? It fixes the blacklist/whitelist lookup in the COM connect object & plugin. Thanks
Attachment #114432 - Flags: superreview?(alecf)
Attachment #114432 - Flags: review?(dbradley)
Comment on attachment 114432 [details] [diff] [review] Patch sr=alecf
Attachment #114432 - Flags: superreview?(alecf) → superreview+
Comment on attachment 114432 [details] [diff] [review] Patch r=dbradley
Attachment #114432 - Flags: review?(dbradley) → review+
Comment on attachment 114432 [details] [diff] [review] Patch Seeking 1.3 approval ActiveX / COM connect specific. Low risk obvious fixes.
Attachment #114432 - Flags: approval1.3?
Fix is checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
verified on 2003-17-02 build
Status: RESOLVED → VERIFIED
Target Milestone: --- → mozilla1.3final
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: