Fix blacklist/whitelist registry code in COM connect. b=193256 r=dbradley sr=alecf a=dbaron